Display name of app changed according to build variant bebug or release. Google service for Firebase analytics implemented. Bundle identifier changed according to build variant bebug or release for iOS and Android.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">SarvikaED</string>
+    <!-- <string name="app_name">SarvikaED</string> -->
+    <string name="app_name_release">SarvikaED</string>
+	<string name="app_name_debug">SarvikaED Beta</string>
 </resources>
